[build-system]
requires = ["regex>=2024.11.6", "setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["ui"]

[project]
name = "cat_ui"
version = "1.0.2"
authors = [
  { name="Akio Smiowly", email="lazzycatto@yandex.com" },
]
description = "Simple python ui lib for cli programs"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENCE"]

[project.urls]
Homepage = "https://github.com/LazzyCatto/cat_ui"
Issues = "https://github.com/LazzyCatto/cat_ui/issues"