[build-system]
requires = ["regex>=2024.11.6", "setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"


[project]
name = "cat_ui"
version = "1.0.4"
authors = [{ name="Akio Smiowly", email="lazzycatto@yandex.com" }]
description = "Simple python ui lib for cli programs"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = ["regex>=2024.11.6"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]


[project.urls]
Homepage = "https://github.com/LazzyCatto/cat_ui"
Issues = "https://github.com/LazzyCatto/cat_ui/issues"
